[package]
name = "enginesound"
version = "1.5.3"
authors = ["https://github.com/DasEtwas/"]
edition = "2018"
description = """
GUI Application used to generate purely synthetic engine sounds with advanced options in real-time, written in Rust.
It features real-time recording of the engine, a CLI, automatic crossfading to create seamless loops in the CLI, realtime frequency domain display through FFT, and preset saving/loading capabilities.
"""

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
# godot integration #
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }

# saving presets #
serde = { version = "1", features = ["derive"] }
ron = "0.6.4"

# sound #
rand_core = "0.6.2"
rand_xorshift = "0.3.0"

[profile.release]
lto = true
strip = true
panic = "unwind"
debug = false

[profile.dev]
panic = "unwind"
