[package]
name = "enginesound"
version = "2.0.2"
authors = ["https://github.com/DasEtwas/"]
edition = "2018"
description = "extension for godot used to generate purely synthetic engine sounds in real-time."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
# godot integration #
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }

# sound #
rand_core = "0.6"
rand_xorshift = "0.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "generation"
harness = false

[profile.release]
lto = true
strip = true
panic = "unwind"
debug = false

[profile.dev]
panic = "unwind"
strip = true
