[package]
name = "enginesound"
version = "2.0.2"
authors = ["https://github.com/DasEtwas/"]
edition = "2018"
description = "extension for godot used to generate purely synthetic engine sounds in real-time."

[lib]
crate-type = ["cdylib"]

[features]
godot = ["dep:godot"]
default = ["godot"]

[dependencies]
# godot integration #
godot = { git = "https://github.com/bend-n/gdext", branch = "docs", optional = true, features = ["custom-godot", "docs"] }

# sound #
rand_core = "0.6"
rand_xorshift = "0.3"
umath = "0.0.7"

[dev-dependencies]
iai = { git = "https://github.com/bend-n/iai/" }

[[bench]]
name = "generation"
harness = false

[profile.release]
lto = true
strip = true
panic = "unwind"
debug = false

[profile.dev]
panic = "unwind"
strip = true
